Compilation Failure Fix and other optimization